{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 121,
  "lineage": "73549b45-28bb-7e81-3a6e-db1ef042d9cf",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "kubeNicMasterNfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-master",
            "internal_domain_name_suffix": "v5ymdaeevxderpsfk2ahaaqnsg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "kubeipconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-master",
                "subnet_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/virtualNetworks/kubenet/subnets/kubesubnet"
              }
            ],
            "location": "uksouth",
            "name": "nic-master",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "rg-kube",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_public_ip.kubePublicIpMasterNfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-nfs",
            "internal_domain_name_suffix": "v5ymdaeevxderpsfk2ahaaqnsg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "kubeipconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-nfs",
                "subnet_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/virtualNetworks/kubenet/subnets/kubesubnet"
              }
            ],
            "location": "uksouth",
            "name": "nic-nfs",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "rg-kube",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_public_ip.kubePublicIpMasterNfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "kubeNicWorkers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-worker01",
            "internal_domain_name_suffix": "v5ymdaeevxderpsfk2ahaaqnsg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "kubeipconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.14",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-worker01",
                "subnet_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/virtualNetworks/kubenet/subnets/kubesubnet"
              }
            ],
            "location": "uksouth",
            "name": "nic-worker01",
            "private_ip_address": "10.0.1.14",
            "private_ip_addresses": [
              "10.0.1.14"
            ],
            "resource_group_name": "rg-kube",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_public_ip.kubePublicIpWorkers",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-worker02",
            "internal_domain_name_suffix": "v5ymdaeevxderpsfk2ahaaqnsg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "kubeipconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.15",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-worker02",
                "subnet_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/virtualNetworks/kubenet/subnets/kubesubnet"
              }
            ],
            "location": "uksouth",
            "name": "nic-worker02",
            "private_ip_address": "10.0.1.15",
            "private_ip_addresses": [
              "10.0.1.15"
            ],
            "resource_group_name": "rg-kube",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_public_ip.kubePublicIpWorkers",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "kubeSecGroupAssociationMastarNfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-master|/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-master",
            "network_interface_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-master",
            "network_security_group_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-master"
          },
          "dependencies": [
            "azurerm_network_interface.kubeNicMasterNfs",
            "azurerm_network_security_group.kubeSecGroupMasterNfs",
            "azurerm_public_ip.kubePublicIpMasterNfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-nfs|/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-nfs",
            "network_interface_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-nfs",
            "network_security_group_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-nfs"
          },
          "dependencies": [
            "azurerm_network_interface.kubeNicMasterNfs",
            "azurerm_network_security_group.kubeSecGroupMasterNfs",
            "azurerm_public_ip.kubePublicIpMasterNfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "kubeSecGroupAssociationWorkers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-worker01|/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-worker01",
            "network_interface_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-worker01",
            "network_security_group_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-worker01"
          },
          "dependencies": [
            "azurerm_network_interface.kubeNicWorkers",
            "azurerm_network_security_group.kubeSecGroupWorkers",
            "azurerm_public_ip.kubePublicIpWorkers",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-worker02|/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-worker02",
            "network_interface_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkInterfaces/nic-worker02",
            "network_security_group_id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-worker02"
          },
          "dependencies": [
            "azurerm_network_interface.kubeNicWorkers",
            "azurerm_network_security_group.kubeSecGroupWorkers",
            "azurerm_public_ip.kubePublicIpWorkers",
            "azurerm_resource_group.rg",
            "azurerm_subnet.kubeSubnet",
            "azurerm_virtual_network.kubeNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "kubeSecGroupMasterNfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-master",
            "location": "uksouth",
            "name": "secgroup-master",
            "resource_group_name": "rg-kube",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "PREPROD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-nfs",
            "location": "uksouth",
            "name": "secgroup-nfs",
            "resource_group_name": "rg-kube",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "PREPROD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "kubeSecGroupWorkers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-worker01",
            "location": "uksouth",
            "name": "secgroup-worker01",
            "resource_group_name": "rg-kube",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "PREPROD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/networkSecurityGroups/secgroup-worker02",
            "location": "uksouth",
            "name": "secgroup-worker02",
            "resource_group_name": "rg-kube",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "PREPROD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "kubePublicIpMasterNfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-master",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pubip-master",
            "resource_group_name": "rg-kube",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-nfs",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pubip-nfs",
            "resource_group_name": "rg-kube",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "kubePublicIpWorkers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-worker01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pubip-worker01",
            "resource_group_name": "rg-kube",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/publicIPAddresses/pubip-worker02",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pubip-worker02",
            "resource_group_name": "rg-kube",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "kubeSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/virtualNetworks/kubenet/subnets/kubesubnet",
            "name": "kubesubnet",
            "resource_group_name": "rg-kube",
            "virtual_network_name": "kubenet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.kubeNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "kubeNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "80c1f0af-ad84-48c6-be45-570070020d96",
            "id": "/subscriptions/fbcaab86-89d2-415d-bea2-e9c0080e273e/resourceGroups/rg-kube/providers/Microsoft.Network/virtualNetworks/kubenet",
            "location": "uksouth",
            "name": "kubenet",
            "resource_group_name": "rg-kube",
            "tags": {
              "environment": "PREPROD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}